@startuml

title __LIGHTS's Class Diagram__\n

  namespace up.edu.isgc.raytracer {
    namespace lights {
      class up.edu.isgc.raytracer.lights.DirectionalLight {
          + DirectionalLight()
          + getDirection()
          + getNDotL()
          + setDirection()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace lights {
      abstract class up.edu.isgc.raytracer.lights.Light {
          - intensity : double
          + Light()
          + getIntensity()
          + getIntersection()
          {abstract} + getNDotL()
          + setIntensity()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace lights {
      class up.edu.isgc.raytracer.lights.PointLight {
          + PointLight()
          + getNDotL()
      }
    }
  }
  

  up.edu.isgc.raytracer.lights.DirectionalLight -up-|> up.edu.isgc.raytracer.lights.Light
  up.edu.isgc.raytracer.lights.DirectionalLight o-- up.edu.isgc.raytracer.Vector3D : direction
  up.edu.isgc.raytracer.lights.Light -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.lights.PointLight -up-|> up.edu.isgc.raytracer.lights.Light


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
